1.Invalidate and refresh the IntelliJ's caches File Menu -> Invalidate Caches / Restart -> Invalidate and restart =>OK!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 #configure server port
+spring.jpa.open-in-view=false
 server.port=8484
 spring.datasource.url=jdbc:postgresql://localhost:5432/tacheed
 spring.datasource.username=postgres
